Fix overflow

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -24,6 +24,10 @@ body {
 }
 
 a {
+    @apply text-blue-link;
+}
+
+a:hover {
     @apply underline;
 }
 
